--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="bg-gradient-to-br from-gray-900 to-gray-800 text-white min-h-screen flex flex-col items-center justify-center px-4">
 
-<h1 class="text-5xl font-bold mb-12 text-center tracking-wide drop-shadow-lg">
-    Drum 🎹 Kit
+<h1 class="text-5xl flex gap-9 items-center font-bold mb-12 text-center tracking-wide drop-shadow-lg">
+    Memes sound <span><img src="assets/img/Screenshot 2025-05-16 202326.png" class="w-28 rounded-xl " alt="baby-image"></span>
 </h1>
 
 <div class="set grid grid-cols-4 gap-6">
@@ -22,6 +22,6 @@
     <button class="k drum w-28 h-28 bg-purple-500 hover:bg-purple-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">k</button>
     <button class="l drum w-28 h-28 bg-indigo-500 hover:bg-indigo-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">l</button>
 </div>
-<script src="assests/js/Script.js"></script>
+<script src="assets/js/Script.js"></script>
 </body>
 </html>
