--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     Memes sound <span><img src="assets/img/Screenshot 2025-05-16 202326.png" class="w-28 rounded-xl " alt="baby-image"></span>
 </h1>
 
-<div class="set grid grid-cols-4 gap-6">
-    <button class="w drum w-28 h-28 bg-blue-500 hover:bg-blue-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">w</button>
-    <button class="a drum w-28 h-28 bg-red-500 hover:bg-red-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">a</button>
-    <button class="s drum w-28 h-28 bg-green-500 hover:bg-green-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">s</button>
-    <button class="d drum w-28 h-28 bg-yellow-500 hover:bg-yellow-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">d</button>
-    <button class="j drum w-28 h-28 bg-pink-500 hover:bg-pink-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">j</button>
-    <button class="k drum w-28 h-28 bg-purple-500 hover:bg-purple-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">k</button>
-    <button class="l drum w-28 h-28 bg-indigo-500 hover:bg-indigo-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">l</button>
+<div class="set grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+  <button class="drum w-20 h-20 sm:w-28 sm:h-28 bg-blue-500 hover:bg-blue-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">w</button>
+  <button class="drum w-20 h-20 sm:w-28 sm:h-28 bg-red-500 hover:bg-red-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">a</button>
+  <button class="drum w-20 h-20 sm:w-28 sm:h-28 bg-green-500 hover:bg-green-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">s</button>
+  <button class="drum w-20 h-20 sm:w-28 sm:h-28 bg-yellow-500 hover:bg-yellow-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">d</button>
+  <button class="drum w-20 h-20 sm:w-28 sm:h-28 bg-pink-500 hover:bg-pink-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">j</button>
+  <button class="drum w-20 h-20 sm:w-28 sm:h-28 bg-purple-500 hover:bg-purple-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">k</button>
+  <button class="drum w-20 h-20 sm:w-28 sm:h-28 bg-indigo-500 hover:bg-indigo-600 text-white text-4xl font-bold rounded-2xl shadow-lg active:scale-95 transition">l</button>
 </div>
 <script src="assets/js/Script.js"></script>
 </body>
